--- a/requirements.txt
+++ b/requirements.txt
@@ -14,10 +14,12 @@ distro==1.9.0
 frozenlist==1.5.0
 gitdb==4.0.11
 GitPython==3.1.43
+graphviz==0.20.3
 greenlet==3.1.1
 h11==0.14.0
 httpcore==1.0.6
 httpx==0.27.2
+httpx-sse==0.4.0
 idna==3.10
 Jinja2==3.1.4
 jiter==0.6.1
@@ -26,13 +28,17 @@ jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 langchain==0.3.6
-langchain-core==0.3.14
+langchain-core==0.3.15
 langchain-openai==0.2.4
 langchain-text-splitters==0.3.1
+langgraph==0.2.43
+langgraph-checkpoint==2.0.2
+langgraph-sdk==0.1.35
 langsmith==0.1.138
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+msgpack==1.1.0
 multidict==6.1.0
 narwhals==1.12.1
 numpy==1.26.4
