--- a/requirements.txt
+++ b/requirements.txt
@@ -5,18 +5,26 @@ altair==5.4.1
 annotated-types==0.7.0
 anyio==4.6.2.post1
 attrs==24.2.0
+beautifulsoup4==4.12.3
 blinker==1.8.2
 cachetools==5.5.0
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.4.0
 click==8.1.7
+contourpy==1.3.0
+cryptography==43.0.3
+cycler==0.12.1
 distro==1.9.0
+fonttools==4.54.1
+frozendict==2.4.6
 frozenlist==1.5.0
 gitdb==4.0.11
 GitPython==3.1.43
 graphviz==0.20.3
 greenlet==3.1.1
 h11==0.14.0
+html5lib==1.1
 httpcore==1.0.6
 httpx==0.27.2
 httpx-sse==0.4.0
@@ -27,6 +35,8 @@ jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
+jwt==1.3.1
+kiwisolver==1.4.7
 langchain==0.3.6
 langchain-core==0.3.15
 langchain-openai==0.2.4
@@ -35,26 +45,35 @@ langgraph==0.2.43
 langgraph-checkpoint==2.0.2
 langgraph-sdk==0.1.35
 langsmith==0.1.138
+lxml==5.3.0
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
+matplotlib==3.9.2
 mdurl==0.1.2
+mplfinance==0.12.10b0
 msgpack==1.1.0
 multidict==6.1.0
+multitasking==0.0.11
 narwhals==1.12.1
 numpy==1.26.4
 openai==1.53.0
 orjson==3.10.10
 packaging==24.1
 pandas==2.2.3
+peewee==3.17.7
 pillow==10.4.0
+platformdirs==4.3.6
 plotly==5.24.1
 propcache==0.2.0
 protobuf==5.28.3
 pyarrow==18.0.0
+pycparser==2.22
 pydantic==2.9.2
 pydantic_core==2.23.4
 pydeck==0.9.1
 Pygments==2.18.0
+PyJWT==2.9.0
+pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.2
@@ -68,6 +87,7 @@ rpds-py==0.20.0
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
+soupsieve==2.6
 SQLAlchemy==2.0.36
 streamlit==1.39.0
 tenacity==9.0.0
@@ -79,4 +99,6 @@ typing_extensions==4.12.2
 tzdata==2024.2
 urllib3==2.2.3
 watchdog==5.0.3
+webencodings==0.5.1
 yarl==1.17.1
+yfinance==0.2.48
